# arg

./: LICENSE  README.md  setup.cfg
src/arg/: arg.py
src/arg_package.egg-info/: PKG-INFO  SOURCES.txt
tests/: test.py
