[metadata]
name = arg-package
version = 0.0.1
author = Anton Nedilko
author_email = tech.developer.git@gmail.com
description = A small package with functions to manage program arguments
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/techeditorsrc/arg/blob/main/
project_urls =
    Bug Tracker = https://github.com/techeditorsrc/arg/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
